parser.output
Terminals which are not used

   THIS
   NEW
   TRUE
   FALSE
   COMMA
   DOT


State 89 conflicts: 1 shift/reduce


Grammar

    0 $accept: Goal $end

    1 Goal: MainClass ClassDeclarations

    2 MainClass: CLASS IDENTIFIER LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET MainArgs RPAREN LBRACE StatementList RBRACE RBRACE

    3 MainArgs: IDENTIFIER
    4         | /* empty */

    5 ClassDeclarations: /* empty */
    6                  | ClassDeclarations ClassDeclaration

    7 ClassDeclaration: CLASS IDENTIFIER LBRACE VarDeclarations MethodDeclarations RBRACE

    8 VarDeclarations: /* empty */
    9                | VarDeclarations VarDeclaration

   10 VarDeclaration: Type IDENTIFIER SEMICOLON

   11 MethodDeclarations: /* empty */
   12                   | MethodDeclarations MethodDeclaration

   13 MethodDeclaration: PUBLIC Type IDENTIFIER LPAREN ParamList RPAREN LBRACE VarDeclarations StatementList RETURN Expression SEMICOLON RBRACE

   14 ParamList: /* empty */
   15          | Type IDENTIFIER

   16 Type: INT
   17     | BOOLEAN
   18     | IDENTIFIER

   19 StatementList: Statement StatementList
   20              | /* empty */

   21 Statement: LBRACE StatementList RBRACE
   22          | IF LPAREN Expression RPAREN Statement
   23          | IF LPAREN Expression RPAREN Statement ELSE Statement
   24          | WHILE LPAREN Expression RPAREN Statement
   25          | PRINTLN LPAREN Expression RPAREN SEMICOLON
   26          | IDENTIFIER ASSIGN Expression SEMICOLON

   27 Expression: Expression AND Expression
   28           | Expression OR Expression
   29           | Expression LT Expression
   30           | Expression GT Expression
   31           | Expression EQUAL Expression
   32           | Expression PLUS Expression
   33           | Expression MINUS Expression
   34           | Expression MULT Expression
   35           | NOT Expression
   36           | LPAREN Expression RPAREN
   37           | NUMBER
   38           | IDENTIFIER
   39           | STRING_LITERAL


Terminals, with rules where they appear

$end (0) 0
error (256)
CLASS (258) 2 7
PUBLIC (259) 2 13
STATIC (260) 2
VOID (261) 2
MAIN (262) 2
INT (263) 16
BOOLEAN (264) 17
RETURN (265) 13
IF (266) 22 23
ELSE (267) 23
WHILE (268) 24
PRINTLN (269) 25
THIS (270)
NEW (271)
TRUE (272)
FALSE (273)
LPAREN (274) 2 13 22 23 24 25 36
RPAREN (275) 2 13 22 23 24 25 36
LBRACE (276) 2 7 13 21
RBRACE (277) 2 7 13 21
LBRACKET (278) 2
RBRACKET (279) 2
SEMICOLON (280) 10 13 25 26
COMMA (281)
DOT (282)
ASSIGN (283) 26
AND (284) 27
OR (285) 28
EQUAL (286) 31
LT (287) 29
GT (288) 30
PLUS (289) 32
MINUS (290) 33
MULT (291) 34
NOT (292) 35
IDENTIFIER (293) 2 3 7 10 13 15 18 26 38
STRING (294) 2
STRING_LITERAL (295) 39
NUMBER (296) 37


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
Goal (43)
    on left: 1, on right: 0
MainClass (44)
    on left: 2, on right: 1
MainArgs (45)
    on left: 3 4, on right: 2
ClassDeclarations (46)
    on left: 5 6, on right: 1 6
ClassDeclaration (47)
    on left: 7, on right: 6
VarDeclarations (48)
    on left: 8 9, on right: 7 9 13
VarDeclaration (49)
    on left: 10, on right: 9
MethodDeclarations (50)
    on left: 11 12, on right: 7 12
MethodDeclaration (51)
    on left: 13, on right: 12
ParamList (52)
    on left: 14 15, on right: 13
Type (53)
    on left: 16 17 18, on right: 10 13 15
StatementList (54)
    on left: 19 20, on right: 2 13 19 21
Statement (55)
    on left: 21 22 23 24 25 26, on right: 19 22 23 24
Expression (56)
    on left: 27 28 29 30 31 32 33 34 35 36 37 38 39,
    on right: 13 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36


state 0

    0 $accept: . Goal $end
    1 Goal: . MainClass ClassDeclarations
    2 MainClass: . CLASS IDENTIFIER LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET MainArgs RPAREN LBRACE StatementList RBRACE RBRACE

    CLASS  shift, and go to state 1

    Goal       go to state 2
    MainClass  go to state 3


state 1

    2 MainClass: CLASS . IDENTIFIER LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET MainArgs RPAREN LBRACE StatementList RBRACE RBRACE

    IDENTIFIER  shift, and go to state 4


state 2

    0 $accept: Goal . $end

    $end  shift, and go to state 5


state 3

    1 Goal: MainClass . ClassDeclarations
    5 ClassDeclarations: .
    6                  | . ClassDeclarations ClassDeclaration

    $default  reduce using rule 5 (ClassDeclarations)

    ClassDeclarations  go to state 6


state 4

    2 MainClass: CLASS IDENTIFIER . LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET MainArgs RPAREN LBRACE StatementList RBRACE RBRACE

    LBRACE  shift, and go to state 7


state 5

    0 $accept: Goal $end .

    $default  accept


state 6

    1 Goal: MainClass ClassDeclarations .  [$end]
    6 ClassDeclarations: ClassDeclarations . ClassDeclaration
    7 ClassDeclaration: . CLASS IDENTIFIER LBRACE VarDeclarations MethodDeclarations RBRACE

    CLASS  shift, and go to state 8

    $default  reduce using rule 1 (Goal)

    ClassDeclaration  go to state 9


state 7

    2 MainClass: CLASS IDENTIFIER LBRACE . PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET MainArgs RPAREN LBRACE StatementList RBRACE RBRACE

    PUBLIC  shift, and go to state 10


state 8

    7 ClassDeclaration: CLASS . IDENTIFIER LBRACE VarDeclarations MethodDeclarations RBRACE

    IDENTIFIER  shift, and go to state 11


state 9

    6 ClassDeclarations: ClassDeclarations ClassDeclaration .

    $default  reduce using rule 6 (ClassDeclarations)


state 10

    2 MainClass: CLASS IDENTIFIER LBRACE PUBLIC . STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET MainArgs RPAREN LBRACE StatementList RBRACE RBRACE

    STATIC  shift, and go to state 12


state 11

    7 ClassDeclaration: CLASS IDENTIFIER . LBRACE VarDeclarations MethodDeclarations RBRACE

    LBRACE  shift, and go to state 13


state 12

    2 MainClass: CLASS IDENTIFIER LBRACE PUBLIC STATIC . VOID MAIN LPAREN STRING LBRACKET RBRACKET MainArgs RPAREN LBRACE StatementList RBRACE RBRACE

    VOID  shift, and go to state 14


state 13

    7 ClassDeclaration: CLASS IDENTIFIER LBRACE . VarDeclarations MethodDeclarations RBRACE
    8 VarDeclarations: .
    9                | . VarDeclarations VarDeclaration

    $default  reduce using rule 8 (VarDeclarations)

    VarDeclarations  go to state 15


state 14

    2 MainClass: CLASS IDENTIFIER LBRACE PUBLIC STATIC VOID . MAIN LPAREN STRING LBRACKET RBRACKET MainArgs RPAREN LBRACE StatementList RBRACE RBRACE

    MAIN  shift, and go to state 16


state 15

    7 ClassDeclaration: CLASS IDENTIFIER LBRACE VarDeclarations . MethodDeclarations RBRACE
    9 VarDeclarations: VarDeclarations . VarDeclaration
   10 VarDeclaration: . Type IDENTIFIER SEMICOLON
   11 MethodDeclarations: .  [PUBLIC, RBRACE]
   12                   | . MethodDeclarations MethodDeclaration
   16 Type: . INT
   17     | . BOOLEAN
   18     | . IDENTIFIER

    INT         shift, and go to state 17
    BOOLEAN     shift, and go to state 18
    IDENTIFIER  shift, and go to state 19

    $default  reduce using rule 11 (MethodDeclarations)

    VarDeclaration      go to state 20
    MethodDeclarations  go to state 21
    Type                go to state 22


state 16

    2 MainClass: CLASS IDENTIFIER LBRACE PUBLIC STATIC VOID MAIN . LPAREN STRING LBRACKET RBRACKET MainArgs RPAREN LBRACE StatementList RBRACE RBRACE

    LPAREN  shift, and go to state 23


state 17

   16 Type: INT .

    $default  reduce using rule 16 (Type)


state 18

   17 Type: BOOLEAN .

    $default  reduce using rule 17 (Type)


state 19

   18 Type: IDENTIFIER .

    $default  reduce using rule 18 (Type)


state 20

    9 VarDeclarations: VarDeclarations VarDeclaration .

    $default  reduce using rule 9 (VarDeclarations)


state 21

    7 ClassDeclaration: CLASS IDENTIFIER LBRACE VarDeclarations MethodDeclarations . RBRACE
   12 MethodDeclarations: MethodDeclarations . MethodDeclaration
   13 MethodDeclaration: . PUBLIC Type IDENTIFIER LPAREN ParamList RPAREN LBRACE VarDeclarations StatementList RETURN Expression SEMICOLON RBRACE

    PUBLIC  shift, and go to state 24
    RBRACE  shift, and go to state 25

    MethodDeclaration  go to state 26


state 22

   10 VarDeclaration: Type . IDENTIFIER SEMICOLON

    IDENTIFIER  shift, and go to state 27


state 23

    2 MainClass: CLASS IDENTIFIER LBRACE PUBLIC STATIC VOID MAIN LPAREN . STRING LBRACKET RBRACKET MainArgs RPAREN LBRACE StatementList RBRACE RBRACE

    STRING  shift, and go to state 28


state 24

   13 MethodDeclaration: PUBLIC . Type IDENTIFIER LPAREN ParamList RPAREN LBRACE VarDeclarations StatementList RETURN Expression SEMICOLON RBRACE
   16 Type: . INT
   17     | . BOOLEAN
   18     | . IDENTIFIER

    INT         shift, and go to state 17
    BOOLEAN     shift, and go to state 18
    IDENTIFIER  shift, and go to state 19

    Type  go to state 29


state 25

    7 ClassDeclaration: CLASS IDENTIFIER LBRACE VarDeclarations MethodDeclarations RBRACE .

    $default  reduce using rule 7 (ClassDeclaration)


state 26

   12 MethodDeclarations: MethodDeclarations MethodDeclaration .

    $default  reduce using rule 12 (MethodDeclarations)


state 27

   10 VarDeclaration: Type IDENTIFIER . SEMICOLON

    SEMICOLON  shift, and go to state 30


state 28

    2 MainClass: CLASS IDENTIFIER LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING . LBRACKET RBRACKET MainArgs RPAREN LBRACE StatementList RBRACE RBRACE

    LBRACKET  shift, and go to state 31


state 29

   13 MethodDeclaration: PUBLIC Type . IDENTIFIER LPAREN ParamList RPAREN LBRACE VarDeclarations StatementList RETURN Expression SEMICOLON RBRACE

    IDENTIFIER  shift, and go to state 32


state 30

   10 VarDeclaration: Type IDENTIFIER SEMICOLON .

    $default  reduce using rule 10 (VarDeclaration)


state 31

    2 MainClass: CLASS IDENTIFIER LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET . RBRACKET MainArgs RPAREN LBRACE StatementList RBRACE RBRACE

    RBRACKET  shift, and go to state 33


state 32

   13 MethodDeclaration: PUBLIC Type IDENTIFIER . LPAREN ParamList RPAREN LBRACE VarDeclarations StatementList RETURN Expression SEMICOLON RBRACE

    LPAREN  shift, and go to state 34


state 33

    2 MainClass: CLASS IDENTIFIER LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET . MainArgs RPAREN LBRACE StatementList RBRACE RBRACE
    3 MainArgs: . IDENTIFIER
    4         | .  [RPAREN]

    IDENTIFIER  shift, and go to state 35

    $default  reduce using rule 4 (MainArgs)

    MainArgs  go to state 36


state 34

   13 MethodDeclaration: PUBLIC Type IDENTIFIER LPAREN . ParamList RPAREN LBRACE VarDeclarations StatementList RETURN Expression SEMICOLON RBRACE
   14 ParamList: .  [RPAREN]
   15          | . Type IDENTIFIER
   16 Type: . INT
   17     | . BOOLEAN
   18     | . IDENTIFIER

    INT         shift, and go to state 17
    BOOLEAN     shift, and go to state 18
    IDENTIFIER  shift, and go to state 19

    $default  reduce using rule 14 (ParamList)

    ParamList  go to state 37
    Type       go to state 38


state 35

    3 MainArgs: IDENTIFIER .

    $default  reduce using rule 3 (MainArgs)


state 36

    2 MainClass: CLASS IDENTIFIER LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET MainArgs . RPAREN LBRACE StatementList RBRACE RBRACE

    RPAREN  shift, and go to state 39


state 37

   13 MethodDeclaration: PUBLIC Type IDENTIFIER LPAREN ParamList . RPAREN LBRACE VarDeclarations StatementList RETURN Expression SEMICOLON RBRACE

    RPAREN  shift, and go to state 40


state 38

   15 ParamList: Type . IDENTIFIER

    IDENTIFIER  shift, and go to state 41


state 39

    2 MainClass: CLASS IDENTIFIER LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET MainArgs RPAREN . LBRACE StatementList RBRACE RBRACE

    LBRACE  shift, and go to state 42


state 40

   13 MethodDeclaration: PUBLIC Type IDENTIFIER LPAREN ParamList RPAREN . LBRACE VarDeclarations StatementList RETURN Expression SEMICOLON RBRACE

    LBRACE  shift, and go to state 43


state 41

   15 ParamList: Type IDENTIFIER .

    $default  reduce using rule 15 (ParamList)


state 42

    2 MainClass: CLASS IDENTIFIER LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET MainArgs RPAREN LBRACE . StatementList RBRACE RBRACE
   19 StatementList: . Statement StatementList
   20              | .  [RBRACE]
   21 Statement: . LBRACE StatementList RBRACE
   22          | . IF LPAREN Expression RPAREN Statement
   23          | . IF LPAREN Expression RPAREN Statement ELSE Statement
   24          | . WHILE LPAREN Expression RPAREN Statement
   25          | . PRINTLN LPAREN Expression RPAREN SEMICOLON
   26          | . IDENTIFIER ASSIGN Expression SEMICOLON

    IF          shift, and go to state 44
    WHILE       shift, and go to state 45
    PRINTLN     shift, and go to state 46
    LBRACE      shift, and go to state 47
    IDENTIFIER  shift, and go to state 48

    $default  reduce using rule 20 (StatementList)

    StatementList  go to state 49
    Statement      go to state 50


state 43

    8 VarDeclarations: .
    9                | . VarDeclarations VarDeclaration
   13 MethodDeclaration: PUBLIC Type IDENTIFIER LPAREN ParamList RPAREN LBRACE . VarDeclarations StatementList RETURN Expression SEMICOLON RBRACE

    $default  reduce using rule 8 (VarDeclarations)

    VarDeclarations  go to state 51


state 44

   22 Statement: IF . LPAREN Expression RPAREN Statement
   23          | IF . LPAREN Expression RPAREN Statement ELSE Statement

    LPAREN  shift, and go to state 52


state 45

   24 Statement: WHILE . LPAREN Expression RPAREN Statement

    LPAREN  shift, and go to state 53


state 46

   25 Statement: PRINTLN . LPAREN Expression RPAREN SEMICOLON

    LPAREN  shift, and go to state 54


state 47

   19 StatementList: . Statement StatementList
   20              | .  [RBRACE]
   21 Statement: . LBRACE StatementList RBRACE
   21          | LBRACE . StatementList RBRACE
   22          | . IF LPAREN Expression RPAREN Statement
   23          | . IF LPAREN Expression RPAREN Statement ELSE Statement
   24          | . WHILE LPAREN Expression RPAREN Statement
   25          | . PRINTLN LPAREN Expression RPAREN SEMICOLON
   26          | . IDENTIFIER ASSIGN Expression SEMICOLON

    IF          shift, and go to state 44
    WHILE       shift, and go to state 45
    PRINTLN     shift, and go to state 46
    LBRACE      shift, and go to state 47
    IDENTIFIER  shift, and go to state 48

    $default  reduce using rule 20 (StatementList)

    StatementList  go to state 55
    Statement      go to state 50


state 48

   26 Statement: IDENTIFIER . ASSIGN Expression SEMICOLON

    ASSIGN  shift, and go to state 56


state 49

    2 MainClass: CLASS IDENTIFIER LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET MainArgs RPAREN LBRACE StatementList . RBRACE RBRACE

    RBRACE  shift, and go to state 57


state 50

   19 StatementList: . Statement StatementList
   19              | Statement . StatementList
   20              | .  [RETURN, RBRACE]
   21 Statement: . LBRACE StatementList RBRACE
   22          | . IF LPAREN Expression RPAREN Statement
   23          | . IF LPAREN Expression RPAREN Statement ELSE Statement
   24          | . WHILE LPAREN Expression RPAREN Statement
   25          | . PRINTLN LPAREN Expression RPAREN SEMICOLON
   26          | . IDENTIFIER ASSIGN Expression SEMICOLON

    IF          shift, and go to state 44
    WHILE       shift, and go to state 45
    PRINTLN     shift, and go to state 46
    LBRACE      shift, and go to state 47
    IDENTIFIER  shift, and go to state 48

    $default  reduce using rule 20 (StatementList)

    StatementList  go to state 58
    Statement      go to state 50


state 51

    9 VarDeclarations: VarDeclarations . VarDeclaration
   10 VarDeclaration: . Type IDENTIFIER SEMICOLON
   13 MethodDeclaration: PUBLIC Type IDENTIFIER LPAREN ParamList RPAREN LBRACE VarDeclarations . StatementList RETURN Expression SEMICOLON RBRACE
   16 Type: . INT
   17     | . BOOLEAN
   18     | . IDENTIFIER
   19 StatementList: . Statement StatementList
   20              | .  [RETURN]
   21 Statement: . LBRACE StatementList RBRACE
   22          | . IF LPAREN Expression RPAREN Statement
   23          | . IF LPAREN Expression RPAREN Statement ELSE Statement
   24          | . WHILE LPAREN Expression RPAREN Statement
   25          | . PRINTLN LPAREN Expression RPAREN SEMICOLON
   26          | . IDENTIFIER ASSIGN Expression SEMICOLON

    INT         shift, and go to state 17
    BOOLEAN     shift, and go to state 18
    IF          shift, and go to state 44
    WHILE       shift, and go to state 45
    PRINTLN     shift, and go to state 46
    LBRACE      shift, and go to state 47
    IDENTIFIER  shift, and go to state 59

    $default  reduce using rule 20 (StatementList)

    VarDeclaration  go to state 20
    Type            go to state 22
    StatementList   go to state 60
    Statement       go to state 50


state 52

   22 Statement: IF LPAREN . Expression RPAREN Statement
   23          | IF LPAREN . Expression RPAREN Statement ELSE Statement
   27 Expression: . Expression AND Expression
   28           | . Expression OR Expression
   29           | . Expression LT Expression
   30           | . Expression GT Expression
   31           | . Expression EQUAL Expression
   32           | . Expression PLUS Expression
   33           | . Expression MINUS Expression
   34           | . Expression MULT Expression
   35           | . NOT Expression
   36           | . LPAREN Expression RPAREN
   37           | . NUMBER
   38           | . IDENTIFIER
   39           | . STRING_LITERAL

    LPAREN          shift, and go to state 61
    NOT             shift, and go to state 62
    IDENTIFIER      shift, and go to state 63
    STRING_LITERAL  shift, and go to state 64
    NUMBER          shift, and go to state 65

    Expression  go to state 66


state 53

   24 Statement: WHILE LPAREN . Expression RPAREN Statement
   27 Expression: . Expression AND Expression
   28           | . Expression OR Expression
   29           | . Expression LT Expression
   30           | . Expression GT Expression
   31           | . Expression EQUAL Expression
   32           | . Expression PLUS Expression
   33           | . Expression MINUS Expression
   34           | . Expression MULT Expression
   35           | . NOT Expression
   36           | . LPAREN Expression RPAREN
   37           | . NUMBER
   38           | . IDENTIFIER
   39           | . STRING_LITERAL

    LPAREN          shift, and go to state 61
    NOT             shift, and go to state 62
    IDENTIFIER      shift, and go to state 63
    STRING_LITERAL  shift, and go to state 64
    NUMBER          shift, and go to state 65

    Expression  go to state 67


state 54

   25 Statement: PRINTLN LPAREN . Expression RPAREN SEMICOLON
   27 Expression: . Expression AND Expression
   28           | . Expression OR Expression
   29           | . Expression LT Expression
   30           | . Expression GT Expression
   31           | . Expression EQUAL Expression
   32           | . Expression PLUS Expression
   33           | . Expression MINUS Expression
   34           | . Expression MULT Expression
   35           | . NOT Expression
   36           | . LPAREN Expression RPAREN
   37           | . NUMBER
   38           | . IDENTIFIER
   39           | . STRING_LITERAL

    LPAREN          shift, and go to state 61
    NOT             shift, and go to state 62
    IDENTIFIER      shift, and go to state 63
    STRING_LITERAL  shift, and go to state 64
    NUMBER          shift, and go to state 65

    Expression  go to state 68


state 55

   21 Statement: LBRACE StatementList . RBRACE

    RBRACE  shift, and go to state 69


state 56

   26 Statement: IDENTIFIER ASSIGN . Expression SEMICOLON
   27 Expression: . Expression AND Expression
   28           | . Expression OR Expression
   29           | . Expression LT Expression
   30           | . Expression GT Expression
   31           | . Expression EQUAL Expression
   32           | . Expression PLUS Expression
   33           | . Expression MINUS Expression
   34           | . Expression MULT Expression
   35           | . NOT Expression
   36           | . LPAREN Expression RPAREN
   37           | . NUMBER
   38           | . IDENTIFIER
   39           | . STRING_LITERAL

    LPAREN          shift, and go to state 61
    NOT             shift, and go to state 62
    IDENTIFIER      shift, and go to state 63
    STRING_LITERAL  shift, and go to state 64
    NUMBER          shift, and go to state 65

    Expression  go to state 70


state 57

    2 MainClass: CLASS IDENTIFIER LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET MainArgs RPAREN LBRACE StatementList RBRACE . RBRACE

    RBRACE  shift, and go to state 71


state 58

   19 StatementList: Statement StatementList .

    $default  reduce using rule 19 (StatementList)


state 59

   18 Type: IDENTIFIER .  [IDENTIFIER]
   26 Statement: IDENTIFIER . ASSIGN Expression SEMICOLON

    ASSIGN  shift, and go to state 56

    $default  reduce using rule 18 (Type)


state 60

   13 MethodDeclaration: PUBLIC Type IDENTIFIER LPAREN ParamList RPAREN LBRACE VarDeclarations StatementList . RETURN Expression SEMICOLON RBRACE

    RETURN  shift, and go to state 72


state 61

   27 Expression: . Expression AND Expression
   28           | . Expression OR Expression
   29           | . Expression LT Expression
   30           | . Expression GT Expression
   31           | . Expression EQUAL Expression
   32           | . Expression PLUS Expression
   33           | . Expression MINUS Expression
   34           | . Expression MULT Expression
   35           | . NOT Expression
   36           | . LPAREN Expression RPAREN
   36           | LPAREN . Expression RPAREN
   37           | . NUMBER
   38           | . IDENTIFIER
   39           | . STRING_LITERAL

    LPAREN          shift, and go to state 61
    NOT             shift, and go to state 62
    IDENTIFIER      shift, and go to state 63
    STRING_LITERAL  shift, and go to state 64
    NUMBER          shift, and go to state 65

    Expression  go to state 73


state 62

   27 Expression: . Expression AND Expression
   28           | . Expression OR Expression
   29           | . Expression LT Expression
   30           | . Expression GT Expression
   31           | . Expression EQUAL Expression
   32           | . Expression PLUS Expression
   33           | . Expression MINUS Expression
   34           | . Expression MULT Expression
   35           | . NOT Expression
   35           | NOT . Expression
   36           | . LPAREN Expression RPAREN
   37           | . NUMBER
   38           | . IDENTIFIER
   39           | . STRING_LITERAL

    LPAREN          shift, and go to state 61
    NOT             shift, and go to state 62
    IDENTIFIER      shift, and go to state 63
    STRING_LITERAL  shift, and go to state 64
    NUMBER          shift, and go to state 65

    Expression  go to state 74


state 63

   38 Expression: IDENTIFIER .

    $default  reduce using rule 38 (Expression)


state 64

   39 Expression: STRING_LITERAL .

    $default  reduce using rule 39 (Expression)


state 65

   37 Expression: NUMBER .

    $default  reduce using rule 37 (Expression)


state 66

   22 Statement: IF LPAREN Expression . RPAREN Statement
   23          | IF LPAREN Expression . RPAREN Statement ELSE Statement
   27 Expression: Expression . AND Expression
   28           | Expression . OR Expression
   29           | Expression . LT Expression
   30           | Expression . GT Expression
   31           | Expression . EQUAL Expression
   32           | Expression . PLUS Expression
   33           | Expression . MINUS Expression
   34           | Expression . MULT Expression
